--- a/css/styles.css
+++ b/css/styles.css
@@ -87,6 +87,17 @@ gap: 40px;
  letter-spacing: 0.02em;
  text-decoration: none;
 }
+.header-menu::after {
+ content: "";
+ display: block;
+ width: 100%;
+ height: 4px;
+ border-radius: 2px;
+ background: transparent;
+}
+.header-menu.active::after {
+    background: #404bbf;
+}
 .header-menu:hover,
 .header-menu:focus {
 color: #404bbf;
@@ -121,7 +132,10 @@ margin-left: auto;
 /* region Hero */
 .hero-section {
     padding: 188px 0;
-    background-color: #2E2F42;
+    background-image: 
+     linear-gradient(rgba(46, 47, 66, 0.7),
+     rgba(46, 47, 66, 0.7)),
+     url(../images/hero/people-office\ 1.jpg);
 }
 .hero-title {
     max-width: 496px;
@@ -224,7 +238,10 @@ overflow: hidden;
     border-radius: 0px 0px 4px 4px;
     overflow: hidden;
     background-color: #FFFFFF;
-}
+    box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08),
+     0 1px 1px 0 rgba(46, 47, 66, 0.16),
+     0 1px 2px 0 rgba(46, 47, 66, 0.08);
+ }
 .team-caption {
 margin-bottom: 8px;
 text-align: center;
@@ -317,4 +334,12 @@ border-top: none;
     line-height: 1.5;
     letter-spacing: 0.32px;
 }
-/* endregion */
+
+.footer-title {
+    color: #ffffff;
+    font-weight: 500;
+    letter-spacing: 0.32px;
+}
+.values-icon {
+    background-color: #c71818;  
+}
