--- a/css/styles.css
+++ b/css/styles.css
@@ -40,6 +40,7 @@ box-sizing: border-box;
 /* region Header */
 .header {   
 border-bottom: 1px solid #e7e9fc;
+box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .header-container {
     display: flex;
@@ -70,12 +71,15 @@ border-bottom: 1px solid #e7e9fc;
  display: flex; 
  align-items: center;
  gap: 40px;
+color: #404bbf;
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 
 .address-list {
 display: flex;
 align-items: center;
 gap: 40px;
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 .header-menu {
     position: relative;
@@ -143,8 +147,9 @@ margin-left: auto;
      background-size: cover;
      background-position: center;
      background-repeat: no-repeat;
-     width: 100%;
+    max-width: 1440px;
      height: auto;
+     background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/img-name.jpeg);
 }
 .hero-title {
     max-width: 496px;
@@ -173,11 +178,9 @@ margin-left: auto;
     line-height: 1.5;
     letter-spacing: 0.64px;
     cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.main-button:hover {
-    background-color: #404BBF;
-    border-radius: 50%;
-}
+.main-button:hover,
 .main-button:focus {
 background-color: #404BBF;
 }
@@ -265,6 +268,7 @@ fill: currentColor;
     box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08),
      0 1px 1px 0 rgba(46, 47, 66, 0.16),
      0 1px 2px 0 rgba(46, 47, 66, 0.08);
+    transform: translateY(0%);
  }
 .team-caption {
 margin-bottom: 8px;
@@ -368,7 +372,18 @@ border-top: none;
 }
 .overlay-text {
 color: #F4F4FD;
-
+position: absolute;
+top: 0;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: #f4f4fd;
+padding: 40px 32px;
+background-color: #4d5ae5;
+height: 100%;
+width: 100%;
+transform: translateY(100%);
+transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /* endregion */
 
@@ -410,6 +425,8 @@ max-width: 264px;
 color: #ffffff;
 font-size: 16px;
 line-height: 1.5;
+font-weight: 500;
+letter-spacing: 0.02em;
 }
 .footer a {
     margin-bottom: 16px;
@@ -430,9 +447,28 @@ line-height: 1.5;
 .icon {
     fill: #F4F4FD;
     background-color: #4D5AE5;
+    display: flex;
+    justify-content: center;
+    width: 16px;
+    height: 16px;
+    gap: 24px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .icon-wrapper:hover .icon
 .icon-wrapper:focus .icon {
     fill: #F4F4FD;
     background: #31D0AA;
+}
+.social-icons {
+ width: 100%;
+ height: 100%;
+ background-color: #4d5ae5;
+ border-radius: 50%;
+ display: flex;
+ align-items: center;
+ justify-content: center;
+}
+.social-icons:hover,
+.social-icons:focus {
+    background-color: #404bbf;
 }
