--- a/styles.css
+++ b/styles.css
@@ -4,22 +4,20 @@ body {
     background-color: #FFFFFF;
 }
 /* region Header */
-.header-menu a {
-    text-decoration: none;
-}
-
-.header-contacts a:hover {
-color: #404BBF;
-}
-.header-contacts a:focus {
-    color: #404BBF;
-    text-decoration: underline;
+.header {
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+     0px 1px 1px rgba(46, 47, 66, 0.16), 
+     0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .header-menu {
  font-weight: 500;
  font-size: 16px;
  line-height: 1.5;
- letter-spacing: 0.02px; 
+ letter-spacing: 0.02px;
+ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.header-menu {
+    color: #404bbf;
 }
 .header-info {
   font-size: 16px;
@@ -31,6 +29,8 @@ color: #404BBF;
 /* region Hero */
 .hero-section {
     background-color: #2E2F42;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/img-name.jpeg);
+    max-width: 1440px;
 }
 .hero-title {
     color: #FFFFFF;
@@ -46,6 +46,7 @@ color: #404BBF;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.64px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .main-button:hover {
     background-color: #404BBF;
