--- a/css/styles.css
+++ b/css/styles.css
@@ -256,12 +256,20 @@ fill: currentColor;
     letter-spacing: 0.02em;
     text-transform: capitalize;
 }
+.team-list {
+    display: flex;
+    gap: 24px;
+}
 
-.soyial-list-team {
+.sotial-list-team {
     display: flex;
     justify-content: center;
     gap: 24px;
-}
+    width: 40px;
+    height: 40px;
+    gap: 24px;
+ }
+
 .team-item {
     width: calc((100% - 72px) / 4);
     border-radius: 0px 0px 4px 4px;
@@ -287,12 +295,6 @@ color: #434455;
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.32px;
-}
-.socials-list-team {
-    display: inline-block;
-    width: 40px;
-    height: 40px;
-    gap: 24px;
 }
 
 /* endregion */
@@ -374,14 +376,13 @@ border-top: none;
 }
 .overlay-text {
 color: #F4F4FD;
+background-color: #4d5ae5;
 position: absolute;
 top: 0;
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
-color: #f4f4fd;
 padding: 40px 32px;
-background-color: #4d5ae5;
 height: 100%;
 width: 100%;
 transform: translateY(100%);
@@ -444,13 +445,13 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-icons {
-    width: 100%;
-    height: 100%;
-    background-color: var(--primary-color, #4d5ae5);
-    border-radius: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -460,8 +461,8 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon {
-    width: 24px;
-    height: 24px;
+    width: 16px;
+    height: 16px;
     fill: var(--icon-color, #f4f4fd);
 }
 
