--- a/css/styles.css
+++ b/css/styles.css
@@ -262,7 +262,7 @@ fill: currentColor;
     gap: 24px;
 }
 
-.sotial-list-team {
+.social-list-team {
     display: flex;
     justify-content: center;
     gap: 24px;
@@ -270,7 +270,24 @@ fill: currentColor;
     height: 40px;
     gap: 24px;
  }
+ .socials-team {
+    gap:24px;
 
+ }
+.social-icons-team {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.social-icons-team:hover,
+.social-icons-team:focus {
+    background-color: #404bbf;
+}
 .team-item {
     width: calc((100% - 72px) / 4);
     border-radius: 0px 0px 4px 4px;
@@ -367,9 +384,12 @@ border-top: none;
     left: 0;
     width: 100%;
     height: 100%;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
     transform: translateY(300px);
-    padding: 40px 32px 164px;
+    padding: 40px 32px;
     display: flex;
+    color: #f4f4fd;;
     background: #4D5AE5;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         color 250ms cubic-bezier(0.4, 0, 0.2, 1),
