--- a/css/styles.css
+++ b/css/styles.css
@@ -85,7 +85,7 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 position: relative;
  display: block;
  padding: 24px 0;
- color: #404bbf;
+ color: #2E2F42;
  font-weight: 500;
  font-size: 16px;
  line-height: 1.5;
@@ -109,11 +109,9 @@ position: relative;
 }
 .header-menu:hover,
 .header-menu:focus {
-color: #404bbf;
+ color: #404bbf;
 }
-.header-contacts a:hover {
-color: #404BBF;
-}
+.header-contacts a:hover
 .header-contacts a:focus {
     color: #404BBF;
     text-decoration: underline;
@@ -145,13 +143,12 @@ margin-left: auto;
   background-image: 
   linear-gradient(rgba(46, 47, 66, 0.7),
   rgba(46, 47, 66, 0.7)),
-  url(../images/hero/people-office\ 1.jpg);
+  url(../images/hero/people-office.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   max-width: 1440px;
   height: auto;
-  background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/img-name.jpeg);
 }
 .hero-title {
     max-width: 496px;
@@ -412,22 +409,18 @@ border-top: none;
     color: var(--white-color, #FFFFFF);
 }
 
-.container {
-    display: flex;
-    justify-content: space-between;
-    align-items: baseline;
-    flex-wrap: wrap;
+.footer-container {
+  display: flex; 
 }
-
 .footer-column {
     margin-right: 120px;
 }
-
 .footer-logo {
     text-decoration: none;
     color: var(--white-color, #FFFFFF);
     font-size: 24px;
     font-weight: bold;
+    font-family: "Raleway", sans-serif;
 }
 
 .logo-text {
@@ -435,6 +428,7 @@ border-top: none;
 }
 
 .footer-desc {
+    max-width: 264px;
     margin-top: 16px;
     line-height: 1.5;
     color: var(--white-color, #FFFFFF);
@@ -464,16 +458,13 @@ border-top: none;
     border-radius: 50%;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .social-icons:hover,
 .social-icons:focus {
     background-color: #31d0aa;
 }
 
 .icon {
-    width: 16px;
-    height: 16px;
-    fill: var(--icon-color, #f4f4fd);
+ fill: var(--icon-color, #f4f4fd);
 }
 .socials-list {
     width: 40px;
